Testimonials, fixed FAB layout shift after animation"

--- a/src/components/CanvaSections/Testimonials/testimonials.styles.module.css
+++ b/src/components/CanvaSections/Testimonials/testimonials.styles.module.css
@@ -7,9 +7,9 @@
   flex-direction: column;
   align-items: center;
   padding-top: 35px;
-  opacity: 0;
 }
 
 .gridWrapper {
   display: grid;
+  min-height: content;
 }
